@@ -14,6 +14,7 @@ Misc:
  - GB Memory: Support running from blocked memory
  - Qt: Don't unload ROM immediately if it crashes
  - Debugger: Add breakpoint and watchpoint listing
+ - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
 
 0.7.1: (2019-02-24)
 Bugfixes:
